--- a/views/home.html
+++ b/views/home.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/home.css">
     <title>Home</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <header>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./works.html">Works</a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>GIGA CHAD</h1>
+        <img src="../public/images/gigachad.jpg">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit sagittis justo, eu posuere orci aliquam a. Aliquam maximus est eget scelerisque sollicitudin. Morbi elementum nibh ut sapien porttitor porttitor. Nullam eleifend tellus at massa molestie rutrum. Mauris consectetur nec elit eget euismod. Donec sollicitudin, turpis vel tempor auctor, ex sapien blandit odio, at molestie libero tortor id mauris. Aliquam tellus lectus, tristique eget nibh eget, porttitor semper nulla. Sed vitae rhoncus tellus. Cras tempus nibh sit amet sapien egestas vulputate. Donec tempus lacus sed ante congue, quis tristique mauris eleifend. Sed sed laoreet tortor, tristique commodo lorem. Etiam varius massa quis lacus ultricies venenatis.
+        </p>
+      </section>
 </body>
 </html>
