--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
         <h1>GIGA CHAD</h1>
         <img src="../public/images/gigachad.jpg">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit sagittis justo, eu posuere orci aliquam a. Aliquam maximus est eget scelerisque sollicitudin. Morbi elementum nibh ut sapien porttitor porttitor. Nullam eleifend tellus at massa molestie rutrum. Mauris consectetur nec elit eget euismod. Donec sollicitudin, turpis vel tempor auctor, ex sapien blandit odio, at molestie libero tortor id mauris. Aliquam tellus lectus, tristique eget nibh eget, porttitor semper nulla. Sed vitae rhoncus tellus. Cras tempus nibh sit amet sapien egestas vulputate. Donec tempus lacus sed ante congue, quis tristique mauris eleifend. Sed sed laoreet tortor, tristique commodo lorem. Etiam varius massa quis lacus ultricies venenatis.
+        GigaChad is a nickname associated with the art project berlin.1969 / Ernest Khalimov,[1] which is a series of photoshopped photographs of several models created by Russian photographer Krista Sudmalis for her project Sleek'N'Tears.[4] The name "GigaChad" indicates that the person, who was initially assumed to be real, is the ultimate Chad Thundercock, an internet archetype representing an ultra-masculine male. Online, the term was popularized within various incel communities.
         </p>
       </section>
 </body>
